# xrootd-auth-change-uid

./: CMakeLists.txt  README  README.md  xrootd-auth-chance-uid.spec
src/: AuthChangeFsUid.cc  AuthChangeFsUid.hh  CMakeLists.txt
